--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,7 +86,31 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark' # or 'light'
 
-# set -g @plugin 'erikw/tmux-powerline'
+set -g @plugin 'dracula/tmux'
+
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time
+set -g @dracula-plugins "time network cpu-usage ram-usage battery"
+
+# for left
+set -g @dracula-show-left-sep 
+
+# for right symbol (can set any symbol you like as seperator)
+set -g @dracula-show-right-sep 
+
+set -g @dracula-show-powerline true
+
+# the default is 5, it can accept any number
+set -g @dracula-refresh-rate 5
+
+# it can accept `session`, `smiley`, `window`, or any character.
+set -g @dracula-show-left-icon session
+
+set -g @dracula-border-contrast true
+
+set -g @dracula-day-month true
+
+set -g @dracula-military-time true
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
